# Vesper

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.txt
assets/: VesperLogo.odg
cmake/: vesperConfig.cmake.in
docker/: Dockerfile  compose.yml  entrypoint.sh
docker/data/: logs.txt
docs/: docs.sh
docs/source/: Documentation.rst  Overview.rst  ProjectStructure.rst  conf.py  index.rst
examples/: main.cpp
examples/example1/: CMakeLists.txt
examples/example1/libs/http-server/include/: radixTree.h  server.h
examples/example1/libs/vesper/include/: server.h
examples/example1/src/: main.cpp
include/async/: awaiters.h  task.h
include/http/: HttpConnection.h  HttpServer.h
include/tcp/: TcpServer.h  osFuncs.h
include/utils/: logging.h
include/vesper/: vesper.h
include/vesper/async/: awaiters.h  eventLoop.h  task.h
include/vesper/http/: HttpServer.h  defaultMiddleware.h  radixTree.h
include/vesper/tcp/: TcpServer.h
include/vesper/utils/: logging.h  threadPool.h
src/: HttpConnection.cpp  HttpServer.cpp  TcpServer.cpp  main.cpp  radixTree.cpp  server.cpp  urlEncoding.cpp  vesper.h
src/http/: HttpConnection.cpp  HttpServer.cpp  radixTree.cpp
src/include/: logging.h  radixTree.h  server.h  urlEncoding.h
src/include/async/: eventLoop.h
src/include/http/: HttpConnection.h  HttpServer.h  radixTree.h
src/include/tcp/: TcpServer.h
src/include/utils/: logging.h
src/tcp/: TcpServer.cpp
src/utils/: threadPool.cpp  urlEncoding.cpp
tests/http/: HttpConnection_test.cpp  radixTree_test.cpp
tests/tcp/: TcpServer_test.cpp
